Fix for bug 1415: typo s/button/submit/
Signed-off-by: Chris Cormack <crc@liblime.com>
Signed-off-by: Joshua Ferraro <jmf@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/biblio_framework.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/biblio_framework.tmpl
@@ -81,7 +81,7 @@ function Check(f) {
         <!-- /TMPL_IF -->
         <p><label for="description">Description</label>
         <input type="text" name="frameworktext" size="40" maxlength="80" value="<!-- TMPL_VAR NAME="frameworktext" ESCAPE="HTML" -->" /></p>
-        <p>	<input type="button" value="Submit" class="submit" onclick="Check(this.form)" /></p>
+        <p>	<input type="submit" value="Submit" class="submit" onclick="Check(this.form)" /></p>
     </form>
 <!-- /TMPL_IF -->
 
